[ls] clean up code